enum Availability {
  available,
  unavailable,
  limited,
}

